> before active route

--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,58 @@
-/* body { */
-/*   background-color: #1c1c1c; */
-/*   padding: 20px; */
-/*   margin: 0; */
-/* } */
-/* h1, h2, p, ul, li { */
-/*   font-family: sans-serif; */
-/* } */
-/* ul.header li { */
-/*   display: inline; */
-/*   list-style-type: none; */
-/*   margin: 0; */
-/* } */
-/* ul.header { */
-/*   background-color: #111; */
-/*   padding: 0; */
-/* } */
-/* ul.header li a { */
-/*   color: #FFF; */
-/*   font-weight: bold; */
-/*   text-decoration: none; */
-/*   padding: 20px; */
-/*   display: inline-block; */
-/* } */
-/* .content { */
-/*   background-color: #FFF; */
-/*   padding: 20px; */
-/* } */
-/* .content h2 { */
-/*   padding: 0; */
-/*   margin: 0; */
-/* } */
-/* .content li { */
-/*   margin-bottom: 10px; */
-/* } */
-/* h1 { */
-/*   color: #fff; */
-/* } */
 
+body {
+  background-color: #1c1c1c;
+  color: #FFF8DC;
+  margin-left: 20rem;
+}
+
+section {
+  border: dashed 2px white;
+  display: block;
+  position: relative;
+  width: 100%;
+}
+
+section > pre {
+  /* border: dashed 2px white; */
+  font-size: 1rem;
+  width: 100%;
+
+  font-family: "Courier New", Courier, monospace;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+nav > ul {
+  /* border: dashed 2px white; */
+  display: flex;
+  margin: 0 auto;
+  list-style-type: none;
+  position: relative;
+  list-style: none;
+  /* margin-left: 0; */
+  /* padding-left: 1em; */
+  /* text-indent: -1em; */
+  /* top: -16rem; */
+  /* left: 4rem; */
+}
+
+nav > ul > li {
+  font-size: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+article {
+  /* border: dashed 2px white; */
+  padding: 2rem;
+}
+
+.container {
+  border: dashed 2px white;
+}
 .active {
   background-color: #0099FF;
+}
+.active:before {
+  content:">  ";
 }
