--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@ body {
   color: #1F1F1F;
   overflow-x: hidden;
   overflow-y: hidden;
+  outline:none
 }
 
 nav > ul > li > a {
   text-decoration: none;
   color: #262626;
+  outline:none;
 }
 
 nav > ul {
@@ -18,15 +20,15 @@ nav > ul {
   list-style-type: none;
   position: relative;
   list-style: none;
-  top: -1.8rem;
+  top: -2.5rem;
   left: 0.5rem;
 }
 
 nav > ul > li {
-  font-size: 2.0rem;
+  font-size: 2.3rem;
   font-family: 'VT323', monospace;
-  margin-left: -0.3rem;
-  margin-right: -0.3rem;
+  margin-left: -0.6rem;
+  margin-right: -0.6rem;
 }
 
 nav > ul > li:before {
@@ -45,15 +47,16 @@ nav > ul > li > :not(.active):before {
   content:">";
   font-weight: bold;
   animation: blinker 2s linear infinite;
-  padding: 0.4rem;
+  padding: 0.2rem;
   position: relative;
   top: 0.1rem;
   animation: glitch 4s steps(100) infinite;
 }
 
-@keyframes blinker {  
-  50% { opacity: 0; }
+nav > ul > li:hover {
+ animation: glitch 2s steps(100) infinite;
 }
+
 /* submenu */
 .submenu > ul > li {
   font-size: 1.5rem;
@@ -72,26 +75,29 @@ nav > ul > li > :not(.active):before {
   justify-content: center;
   font-family: "Hack";
   font-size: 1.4rem;
-  margin-top: 9rem;
 }
 
 #logo {
   font-family: "Courier New", Courier, monospace;
   line-height: 1.5em;
-  position: relative;
-  top: 7rem;
   display: flex;
   justify-content: center;
-  max-height: 12rem;
+  align-content: center;
+  margin: 0 auto;
+  max-height: 10rem;
+  max-width: 25rem;
+  margin-bottom: 5rem;
+  margin-top: 12rem;
+
 }
 
-nav > ul > li:hover {
- animation: glitch 2s steps(100) infinite;
-}
 
 article {
   border: 2px solid #1c1c1c;
+  margin: 0 auto;
   margin: 1rem;
+  margin-top: 1rem;
+  
 }
 
 article > img {
@@ -103,9 +109,120 @@ article > p {
   padding: 1rem;
 }
 
+/* animation */
+
+@keyframes blinker {
+  50% { opacity: 0; }
+}
 /* glitch */
 .glitch:hover {
  animation: glitch 2s steps(100) infinite;
+}
+
+
+@keyframes glitch2 {
+0%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+1%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+2%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+3%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+4%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+5%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+6%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+7%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+8%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+9%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+10%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+11%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+12%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+13%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+14%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+15%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+16%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+17%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+18%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+19%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+20%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+21%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+22%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+23%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+24%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+25%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+26%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+27%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+28%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+29%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+30%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+31%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+32%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+33%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+34%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+35%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+36%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+37%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+38%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+39%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+40%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+41%{text-shadow:50px 0 0 #333333,-50px 0 0 #222222;}
+42%{text-shadow:0 0 0 #333333,0 0 0 #222222;}
+43%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+44%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+45%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+46%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+47%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+48%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+49%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+50%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+51%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+52%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+53%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+54%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+55%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+56%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+57%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+58%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+59%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+60%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+61%{text-shadow:30px 0 0 #666666,-30px 0 0 #222222;}
+62%{text-shadow:0 0 0 #666666,0 0 0 #222222;}
+63%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
+64%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
+65%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
+66%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
+67%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+68%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+69%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+70%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+71%{text-shadow:70px 0 0 #666666,-70px 0 0 #333333;}
+72%{text-shadow:0 0 0 #666666,0 0 0 #333333;}
+73%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+74%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+75%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+76%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
+77%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+78%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+79%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+80%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
+81%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+82%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+83%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+84%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+85%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
+86%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+87%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+88%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+89%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+90%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
+91%{text-shadow:60px 0 0 #222222,-60px 0 0 #333333;}
+92%{text-shadow:0 0 0 #222222,0 0 0 #333333;}
+92%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+93%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+94%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+95%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
+96%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+97%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+98%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+99%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
+100%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
 }
 
 @keyframes glitch {
@@ -180,7 +297,7 @@ article > p {
 68%{text-shadow:-1px 0 0 #8A14FF,1px 0 0 #0085FF;}
 69%{text-shadow:-1px 0 0 #8A14FF,1px 0 0 #0085FF;}
 70%{text-shadow:-1px 0 0 #8A14FF,1px 0 0 #0085FF;}
-71%{text-shadow:70px 0 0 #8A14FF,-70px 0 0 #0085FF;}
+71%{text-shadow:90px 0 0 #8A14FF,-70px 0 0 #0085FF;}
 72%{text-shadow:0 0 0 #8A14FF,0 0 0 #0085FF;}
 73%{text-shadow:1px 0 0 #8A14FF,-1px 0 0 #0085FF;}
 74%{text-shadow:1px 0 0 #8A14FF,-1px 0 0 #0085FF;}
