--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ h1, h2, h3 {
   font-size: 0.6rem;
 }
 
-
  ul > li > a {
   text-decoration: none;
   color: #313131;
@@ -27,15 +26,16 @@ nav > ul {
   list-style-type: none;
   position: relative;
   list-style: none;
-  top: -2.5rem;
+  top: -0.2rem;
   left: 0.5rem;
 }
 
 nav > ul > li {
-  font-size: 2.2rem;
+  font-size: 2.3rem;
   font-family: 'VT323', monospace;
-  margin-left: -0.6rem;
-  margin-right: -0.6rem;
+
+  margin-left: -0.4rem;
+  margin-right: -0.4rem;
 }
 
 .nav > ul > li:before {
@@ -68,7 +68,7 @@ nav > ul > li:hover {
   font-size: 1.5rem;
   margin: 0 0.1rem;
   position: relative;
-  top: -1.2rem;
+  top: -0.7rem;
 }
 
 .submenu > ul > li:before {
@@ -100,14 +100,14 @@ nav > ul > li:hover {
   display: flex;
   justify-content: center;
   font-family: 'Roboto Mono', monospace;
-  font-weight: 100;
   color:#313131;
   font-size: 1.2rem;
 }
 
 #logo {
   font-family: "Courier New", Courier, monospace;
-  line-height: 1.5em;
+  line-height: 1.7rem;
+  font-size: 1.4rem;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -116,14 +116,13 @@ nav > ul > li:hover {
   max-width: 25rem;
   margin-bottom: 5rem;
   margin-top: 12rem;
-
 }
 
 
 article {
   margin: 0 auto;
   margin: 1rem;
-  margin-top: 1rem;
+  margin-top: -2.6rem;
   padding: 1rem;
 }
 
@@ -134,15 +133,27 @@ article > img {
 
 article > ul {
   list-style-type: none;
-}
-article > h3 {
-  margin-right: 2rem;
-  float: left;
-  position: relative;
-  top: 3rem;
-  min-height: 5.5rem;
+  margin-top: 2rem;
 }
 
+article > h3 {
+  position: relative;
+  right: 1.3rem;
+}
+article > h3:nth-of-type(1) {
+  top: 5.3rem;
+}
+
+article > h3:nth-of-type(2) {
+  top: 4.5rem;
+}
+article > h3:nth-of-type(3) {
+  top: 6.0rem;
+}
+
+article > ul:nth-of-type(2) > li:nth-of-type(1) {
+  color: red;
+}
 /* animation */
 
 @keyframes blinker {
