--- a/src/index.css
+++ b/src/index.css
@@ -134,12 +134,16 @@ article > img {
 article > ul {
   list-style-type: none;
   margin-top: 2rem;
+  margin-bottom: -1rem;
+  margin-left: 6rem;
 }
 
 article > h3 {
   position: relative;
   right: 1.3rem;
+  margin-left: 6rem;
 }
+
 article > h3:nth-of-type(1) {
   top: 5.3rem;
 }
