added logo as a component, added copy2click

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
-  background-color: #0F0F0F;
-  color: #1c1c1c;
+  background-color: #070707;
   overflow-x: hidden;
   overflow-y: hidden;
   outline:none;
+pointer-events: none;
 }
+
+* {
+   outline: none;
+   }
 
 h1, h2, h3 {
   font-family: 'Press Start 2P', cursive;
@@ -18,6 +22,9 @@ h1, h2, h3 {
   outline:none;
 }
 
+nav {
+  margin: 0;
+}
 
 nav > ul {
   display: flex;
@@ -100,23 +107,26 @@ nav > ul > li:hover {
 #root {
   display: flex;
   justify-content: center;
+  align-content: center;
+  flex-direction: row;
   font-family: 'Roboto Mono', monospace;
   color:#313131;
-  font-size: 1.2rem;
 }
 
 #logo {
   font-family: "Courier New", Courier, monospace;
   line-height: 1.7rem;
   font-size: 1.4rem;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: 0 auto;
-  max-height: 10rem;
-  max-width: 25rem;
-  margin-bottom: 5rem;
-  margin-top: 12rem;
+  /* margin: 0 auto; */
+  color: #111;
+  margin-top: 25rem;
+  margin-bottom: 2rem;
+  padding: 0;
+  cursor: cell;
+  display: inline;
+  position: static;
+  z-index: 99;
+  pointer-events: auto;
 }
 
 
@@ -124,6 +134,7 @@ article {
   margin: 0 auto;
   margin: 1rem;
   margin-top: -2.6rem;
+  margin-left: 4rem;
   padding: 1rem;
 }
 
@@ -162,6 +173,21 @@ ul > li > a > div {
   outline:none;
   display: inline;
 }
+ div div article ul li button {
+  color: #313131;
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 0;
+}
+ div div article ul li button:hover {
+  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
+}
+ div div article ul li button:hover:after {
+  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
+  content: "  copy"
+}
+
 article > ul > li > div:hover {
   animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
 }
