--- a/src/index.css
+++ b/src/index.css
@@ -1,304 +1,17 @@
 body {
   background-color: #070707;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  outline:none;
+  font-family: 'Roboto Mono', monospace;
+  color:#313131;
 }
-
-* {
-   outline: none;
-   border: none;
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+a {
+  color: #222;
 }
-
 h1, h2, h3 {
   font-family: 'Press Start 2P', cursive;
   font-weight: 900;
   font-size: 0.6rem;
 }
 
-ul > li {
-  display: block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 200%;
-}
-
-ul > li > a {
-  color: #1c1c1c;
-
-  white-space: nowrap;
-  text-overflow: ellipsis-word;
-  -webkit-text-stroke: 0.1px #313131;
-}
-
-nav {
-  position: relative;
-  bottom: 10rem;
-  display: block;
-  padding: 0;
-  margin: 0;
-}
-
-nav > ul {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  list-style-type: none;
-  position: relative;
-  list-style: none;
-  top: -1.0rem;
-  left: -2.5rem;
-  margin-left: 8rem;
-  margin-right: 8rem;
-}
-
-nav > ul > li {
-  font-size: 2.3rem;
-  font-family: 'VT323', monospace;
-
-  margin-left: 1rem;
-  margin-right: 1rem;
-
-  pointer-events: auto;
-  display: inline-block;
-}
-
-.nav > ul > li:before {
-  content:">";
-  visibility: hidden;
-  padding: 0.4rem;
-}
-
-.nav > ul > li > :not(.active):before {
-  content:">";
-  visibility: hidden;
-  padding: 0.4rem;
-}
-
-.nav > ul > li > .active:before {
-  content:">";
-  font-weight: bold;
-  padding: 0.4rem;
-  position: relative;
-  top: 0.15rem;
-  animation: glitch 4s steps(100) 1, blinker 1.5s linear 6;
-}
-
-nav > ul > li:hover {
- animation: glitch 3s steps(100) infinite;
-}
-
-/* submenu */
-.submenu > ul {
-  position: relative;
-  top: 8.7rem;
-  left: -0.7rem;
-
-}
-.submenu > ul > li {
-  font-size: 1.5rem;
-}
-
-.submenu > ul > li:before {
-  content:"/";
-  visibility: hidden;
-  /* padding: 0.2rem; */
-}
-
-.submenu > ul > li > :not(.active):before {
-  content:"/";
-  visibility: hidden;
-  padding: 0.2rem;
-}
-
-.submenu > ul > li > .active:before {
-  content:"/";
-  font-weight: bold;
-  padding: 0.3rem;
-  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
-}
-
-.submenu ul > li > .active {
-  animation: glitch 4s steps(100) 1;
-}
-
-#root {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  font-family: 'Roboto Mono', monospace;
-  color:#313131;
-}
-
-
-article {
-  margin: 0 auto;
-  margin-left: 20%;
-  padding: 1rem;
-}
-
-.whois {
-  margin-top: 9.5rem;
-}
-
-
-article > img {
-  float: left;
-  padding: 1rem;
-}
-.article {
-  display: flex;
-  justify-content: center;
-}
-
-/* contact */
-.contact {
-  margin-top: 1.1rem;
-}
-article > ul {
-  list-style-type: none;
-  margin-left: 6rem;
-}
-
-article > ul > div {
-}
-
-ul > li > div {
-  text-decoration: none;
-  color: #313131;
-  outline:none;
-  display: inline;
-  pointer-events: auto;
-}
-ul > li > div > a {
-  text-decoration: none;
-  color: #313131;
-  outline:none;
-  display: inline;
-
-}
-
-ul > li > a > div {
-  text-decoration: none;
-  color: #313131;
-  outline:none;
-  display: inline;
-  pointer-events: auto;
-}
- div div article ul li button {
-  color: #313131;
-  border: none;
-  background: none;
-  cursor: pointer;
-  padding: 0;
-  pointer-events: auto;
-}
- div div article ul li button:hover {
-  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
-}
- div div article ul li button:hover:after {
-  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
-  content: "  copy"
-}
-
-article > ul > li > div:hover {
-  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
-}
-article > ul > li > a > div:hover {
-  animation: glitch 4s steps(100) 2, blinker 1.5s linear infinite;
-}
-
-article > h3 {
-  position: relative;
-  right: 1.6rem;
-  margin-left: 6rem;
-}
-
-article > h3:nth-of-type(1) {
-  top: 3.8rem;
-}
-
-article > h3:nth-of-type(2) {
-  top: 3.15rem;
-}
-article > h3:nth-of-type(3) {
-  top: 3.8rem;
-  right: 1rem;
-}
-
-/* work */
-
-.work {
-  margin-top: 8.5rem;
-
-}
-.work ul {
-  max-width: 20rem;
-
-}
-.up-scroll {
-  position: relative;
-  display: inline-block;
-  top: 2.0rem;
-  margin-left: 17rem;
-
-  font-stretch: extra-expanded;
-  pointer-events: auto;
-  font-size: 1.2rem;
-  cursor: pointer;
-
-  transform:scale(1.9,0.9);
-  -webkit-transform:scale(1.9,0.9);
-}
-
-.down-scroll {
-  position: relative;
-  display: inline-block;
-  bottom: 1.0rem;
-  margin-left: 17rem;
-
-  pointer-events: auto;
-  font-size: 1.2rem;
-  cursor: pointer;
-
-  transform:scale(1.9,0.9);
-  -webkit-transform:scale(1.9,0.9);
-
-}
-
-.down-scroll:hover {
-  animation: glitch 3s steps(100) infinite;
-  pointer-events: auto;
-}
-
-.up-scroll:hover {
-  animation: glitch 3s steps(100) infinite;
-  pointer-events: auto;
-}
-article > h2 {
-  position: relative;
-  right: 1.3rem;
-}
-
-article > h2:nth-of-type(1) {
-  top: 3.15rem;
-  margin-left: 1.9rem;
-}
-
-article > h2:nth-of-type(2) {
-  top: 3.15rem;
-  margin-left: 5.6rem;
-}
-
-/* whois */
 /* animation */
 
 @keyframes blinker {
@@ -307,112 +20,6 @@ article > h2:nth-of-type(2) {
 /* glitch */
 .glitch:hover {
  animation: glitch 2s steps(100) infinite;
-}
-
-
-@keyframes glitch2 {
-0%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-1%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-2%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-3%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-4%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-5%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-6%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-7%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-8%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-9%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-10%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-11%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-12%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-13%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-14%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-15%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-16%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-17%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-18%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-19%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-20%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-21%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-22%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-23%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-24%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-25%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-26%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-27%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-28%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-29%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-30%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-31%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-32%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-33%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-34%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-35%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-36%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-37%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-38%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-39%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-40%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-41%{text-shadow:50px 0 0 #333333,-50px 0 0 #222222;}
-42%{text-shadow:0 0 0 #333333,0 0 0 #222222;}
-43%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-44%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-45%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-46%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-47%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-48%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-49%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-50%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-51%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-52%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-53%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-54%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-55%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-56%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-57%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-58%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-59%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-60%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-61%{text-shadow:30px 0 0 #666666,-30px 0 0 #222222;}
-62%{text-shadow:0 0 0 #666666,0 0 0 #222222;}
-63%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
-64%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
-65%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
-66%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #333333;}
-67%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-68%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-69%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-70%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-71%{text-shadow:70px 0 0 #666666,-70px 0 0 #333333;}
-72%{text-shadow:0 0 0 #666666,0 0 0 #333333;}
-73%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-74%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-75%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-76%{text-shadow:1px 0 0 #666666,-1px 0 0 #333333;}
-77%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-78%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-79%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-80%{text-shadow:-1px 0 0 #666666,1px 0 0 #333333;}
-81%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-82%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-83%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-84%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-85%{text-shadow:0.5px 0 0 #666666,-0.5px 0 0 #222222;}
-86%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-87%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-88%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-89%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-90%{text-shadow:-1px 0 0 #666666,1px 0 0 #222222;}
-91%{text-shadow:60px 0 0 #222222,-60px 0 0 #333333;}
-92%{text-shadow:0 0 0 #222222,0 0 0 #333333;}
-92%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-93%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-94%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-95%{text-shadow:0.7px 0 0 #333333,-0.7px 0 0 #222222;}
-96%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-97%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-98%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-99%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
-100%{text-shadow:-1px 0 0 #333333,1px 0 0 #222222;}
 }
 
 @keyframes glitch {
@@ -519,5 +126,3 @@ article > h2:nth-of-type(2) {
 99%{text-shadow:-1px 0 0 #0085FF,1px 0 0 #00FF84;}
 100%{text-shadow:-1px 0 0 #0085FF,1px 0 0 #00FF84;}
 }
-
-
