--- a/src/Work/Work.css
+++ b/src/Work/Work.css
@@ -1,40 +1,119 @@
 .work {
-  margin-top: 8.5rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  margin-top: 3.7rem;
+  overflow: hidden;
+}
+
+.philosophy {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  margin-bottom: 2rem;
+  /* border: 2px solid red; */
+}
+
+.code {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  margin-top: 2rem;
+  /* border: 2px solid red; */
+}
+
+.philosophy > h2 {
+  position: relative;
+  left: 2.1rem;
+  top: 3.6rem;
+}
+
+.code > h2 {
+  position: relative;
+  top: 3.65rem;
+  left: 5.8rem;
+}
+
+.philosophy > ul {
+  padding-left: 10rem;
 
 }
 
-.work ul {
-  max-width: 20rem;
+.philosophy > ul > li {
+  overflow: hidden;
+  pointer-events: auto;
+
+  cursor: pointer;
+  max-width: 26rem;
+  min-width: 26rem;
+}
+
+.philosophy > ul > li > a {
+  color: #333;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis-word;
+  -webkit-text-stroke: 0.1px #313131;
+}
+
+/* code */
+
+.code > ul {
+  padding-left: 10rem;
 
 }
 
+.code > ul > li {
+  overflow: hidden;
+  pointer-events: auto;
+
+  cursor: pointer;
+  max-width: 26rem;
+  min-width: 26rem;
+}
+
+.code > ul > li > a {
+  color: #333;
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis-word;
+  -webkit-text-stroke: 0.1px #313131;
+}
+
+
+/* scrolls */
 .up-scroll {
   position: relative;
   display: inline-block;
-  top: 2.0rem;
-  margin-left: 17rem;
+  top: 2.5rem;
+  margin-left: 21rem;
 
   font-stretch: extra-expanded;
   pointer-events: auto;
   font-size: 1.2rem;
   cursor: pointer;
 
-  transform:scale(1.9,0.9);
-  -webkit-transform:scale(1.9,0.9);
+  transform:scale(2.3,0.9);
+  -webkit-transform:scale(2.3,0.9);
 }
 
 .down-scroll {
   position: relative;
   display: inline-block;
   bottom: 1.0rem;
-  margin-left: 17rem;
+  margin-left: 21rem;
 
   pointer-events: auto;
   font-size: 1.2rem;
   cursor: pointer;
 
-  transform:scale(1.9,0.9);
-  -webkit-transform:scale(1.9,0.9);
+  transform:scale(2.3,0.9);
+  -webkit-transform:scale(2.3,0.9);
 
 }
 
@@ -48,34 +127,4 @@
   pointer-events: auto;
 }
 
-.work > h2 {
-  position: relative;
-  right: 1.3rem;
-}
-
-.work > h2:nth-of-type(1) {
-  top: 3.15rem;
-  margin-left: 1.9rem;
-}
-
-.work > h2:nth-of-type(2) {
-  top: 3.15rem;
-  margin-left: 5.6rem;
-}
-
- /* work content */
- /* .work  ul > li { */
- /*  display: block; */
- /*  overflow: hidden; */
- /*  white-space: nowrap; */
- /*  width: 200%; */
-/* } */
-
-/* .work ul > li > a { */
- /*  color: #1c1c1c; */
-
- /*  white-space: nowrap; */
- /*  text-overflow: ellipsis-word; */
- /*  -webkit-text-stroke: 0.1px #313131; */
-/* } */
 
