--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -5,15 +5,18 @@
   align-content: center;
   flex-direction: column;
   margin-top: 30rem;
-  border: 2px solid red;
+  margin-left: 2.5rem;
 }
 
 .contact > ul {
   list-style-type: none;
-  margin-left: 6rem;
+  margin-left: 6.6rem;
+  margin-bottom: -1rem;
+
 }
 
-.contact > ul > div {
+.contact > ul > {
+  pointer-events: auto;
 }
 
 .contact > ul > li > div {
@@ -47,6 +50,7 @@ div div .contact ul li button {
   cursor: pointer;
   padding: 0;
   pointer-events: auto;
+  position: fixed;
 }
 
 /* animation */
@@ -72,14 +76,14 @@ div div .contact ul li button {
 }
 
 .contact > h3:nth-of-type(1) {
-  top: 3.8rem;
+  top: 4.3rem;
 }
 
 .contact > h3:nth-of-type(2) {
-  top: 3.15rem;
+  top: 3.75rem;
 }
 
 .contact > h3:nth-of-type(3) {
-  top: 3.8rem;
+  top: 4.3rem;
   right: 1rem;
 }
