--- a/src/Id/Whois/Whois.css
+++ b/src/Id/Whois/Whois.css
@@ -14,6 +14,7 @@
   height: 15%;
   border: 0.18rem dashed #111;
   border-radius: 20px;
+  visibility: hidden;
 }
 
 .bio {
@@ -21,4 +22,5 @@
   padding: 0 2rem;
   margin: 0rem;
   pointer-events: auto;
+  cursor: auto;
 }
