--- a/src/Id/Id.css
+++ b/src/Id/Id.css
@@ -1,12 +1,17 @@
 /* submenu */
 .submenu > ul {
-  position: relative;
-  top: 3.0rem;
-  left: -0.7rem;
+  position: fixed;
+  /* margin-top: 3.0rem; */
+  margin-left: -10.7rem;
+  top: 3rem;
 }
 .submenu > ul > li {
   font-size: 1.5rem;
+  /* border: 2px solid red; */
   padding: 0 1.5rem;
+  cursor: auto;
+  pointer-events: auto;
+
 }
 
 /* animations */
@@ -29,3 +34,16 @@
 .submenu ul > li > .active {
   animation: glitch 4s steps(100) 1;
 }
+
+@media only screen and (max-width: 500px) {
+
+.submenu > ul {
+  top: 2rem;
+  margin-left: -8.7rem;
+}
+.submenu > ul > li {
+  font-size: 1.3rem;
+    }
+
+}
+
