--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,6 +1,7 @@
 /*main menu */
 .main-nav {
   display: flex;
+  flex-direction: row;
   align-content: center;
   justify-content: center;
   width: 100%;
@@ -50,3 +51,17 @@ nav > ul > li:hover {
   top: 0.15rem;
   animation: glitch 4s steps(100) 1, blinker 1.5s linear 6;
 }
+
+
+@media only screen and (max-width: 500px) {
+
+    nav > ul {
+      margin-top: 17.0rem;
+    }
+
+    nav > ul > li {
+      font-size: 1.4rem;
+    }
+
+}
+
