--- a/src/Id/Whois/Whois.css
+++ b/src/Id/Whois/Whois.css
@@ -26,7 +26,8 @@
   cursor: auto;
 }
 
-@media only screen and (max-width: 580px) {
+
+@media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
   .whois {
     margin-top: 18.5rem;
