--- a/src/Id/Work/Philosophy/Philosophy.css
+++ b/src/Id/Work/Philosophy/Philosophy.css
@@ -45,7 +45,7 @@
   text-overflow: ellipsis-word;
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
   .philosophy > h2 {
     margin-left: 3.2rem;
