--- a/src/Id/Work/Work.css
+++ b/src/Id/Work/Work.css
@@ -52,7 +52,7 @@
   pointer-events: auto;
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
   .work {
     margin-top: 19.2rem;
