--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -53,7 +53,7 @@ nav > ul > li:hover {
 }
 
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
     nav > ul {
       margin-top: 17.0rem;
