--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -25,7 +25,7 @@
   color: #111;
 }
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 650px), only screen and (max-height: 800px) {
 
   #logo {
     margin-top: 8rem;
