--- a/src/Id/Id.css
+++ b/src/Id/Id.css
@@ -46,4 +46,14 @@
     }
 
 }
+@media only screen and (max-width: 400px), only screen and (max-height: 600px) {
 
+.submenu > ul {
+  top: 1.5rem;
+  margin-left: -7.7rem;
+}
+.submenu > ul > li {
+  font-size: 1.1rem;
+    }
+
+}
