--- a/src/Id/Whois/Whois.css
+++ b/src/Id/Whois/Whois.css
@@ -44,4 +44,21 @@
   }
 
 }
+@media only screen and (max-width: 400px), only screen and (max-height: 600px) {
 
+  .whois {
+    margin-top: 10.5rem;
+    margin-left: -16rem;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    position: fixed;
+  }
+
+  .bio {
+    font-size: 0.7rem;
+    width: 60%;
+  }
+
+}
