--- a/src/Id/Work/Work.css
+++ b/src/Id/Work/Work.css
@@ -65,3 +65,15 @@
   }
 }
 
+@media only screen and (max-width: 400px), only screen and (max-height: 600px) {
+
+  .work {
+    margin-top: 10.5rem;
+    margin-left: -15.5rem;
+    font-size: 1rem;
+  }
+  .upfix {
+    margin-bottom: 0.2rem;
+
+  }
+}
