--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -65,3 +65,14 @@ nav > ul > li:hover {
 
 }
 
+@media only screen and (max-width: 400px), only screen and (max-height: 600px) {
+
+    nav > ul {
+      margin-top: 9.1rem;
+    }
+
+    nav > ul > li {
+      font-size: 1.3rem;
+    }
+
+}
