--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -34,3 +34,11 @@
   }
 }
 
+@media only screen and (max-width: 400px), only screen and (max-height: 600px) {
+
+  #logo {
+    margin-top: 2rem;
+    font-size: 0.6rem;
+    line-height: 0.7rem;
+  }
+}
