--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -147,3 +147,11 @@ div div .contact ul li button {
   }
 }
 
+
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+  .contact {
+    margin-top: 6.5rem;
+    margin-left: -13.1rem;
+    position: fixed;
+  }
+}
