--- a/src/Id/Id.css
+++ b/src/Id/Id.css
@@ -44,8 +44,8 @@
 .submenu > ul > li {
   font-size: 1.3rem;
     }
-
 }
+
 @media only screen and (max-width: 400px), only screen and (max-height: 600px) {
 
 .submenu > ul {
@@ -55,5 +55,16 @@
 .submenu > ul > li {
   font-size: 1.1rem;
     }
-
 }
+
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+
+.submenu > ul {
+  top: 1rem;
+  margin-left: -5.7rem;
+}
+.submenu > ul > li {
+  font-size: 0.7rem;
+    }
+}
+
