--- a/src/Id/Whois/Whois.css
+++ b/src/Id/Whois/Whois.css
@@ -42,8 +42,8 @@
   .bio {
     font-size: 0.7rem;
   }
-
 }
+
 @media only screen and (max-width: 400px), only screen and (max-height: 600px) {
 
   .whois {
@@ -60,5 +60,17 @@
     font-size: 0.7rem;
     width: 60%;
   }
-
 }
+
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+
+  .whois {
+    margin-top: 5.5rem;
+  }
+
+  .bio {
+    font-size: 0.6rem;
+    width: 60%;
+  }
+}
+
