--- a/src/Id/Work/Code/Code.css
+++ b/src/Id/Work/Code/Code.css
@@ -66,6 +66,11 @@
   .code > ul > li > a {
     font-size: 0.7rem;
   }
-
 }
 
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+
+  .code > ul > li > a {
+    font-size: 0.6rem;
+  }
+}
