--- a/src/Id/Work/Philosophy/Philosophy.css
+++ b/src/Id/Work/Philosophy/Philosophy.css
@@ -56,3 +56,10 @@
     font-size: 0.7rem;
   }
 }
+
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+
+  .philosophy > ul > li > a {
+    font-size: 0.6rem;
+  }
+}
