--- a/src/Id/Work/Work.css
+++ b/src/Id/Work/Work.css
@@ -57,7 +57,7 @@
   .work {
     margin-top: 19.2rem;
     margin-left: -15.5rem;
-    font-size: 1rem;
+    font-size: 0.6rem;
   }
   .upfix {
     margin-bottom: 0.2rem;
@@ -75,5 +75,16 @@
   .upfix {
     margin-bottom: 0.2rem;
 
+  }
+}
+
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+
+  .work {
+    margin-top: 6.5rem;
+    margin-left: -15.5rem;
+  }
+  .upfix {
+    margin-bottom: 0.2rem;
   }
 }
