--- a/src/Nathias/Nathias.css
+++ b/src/Nathias/Nathias.css
@@ -42,3 +42,12 @@
     line-height: 0.7rem;
   }
 }
+
+@media only screen and (max-width: 350px), only screen and (max-height: 470px) {
+
+  #logo {
+    margin-top: 1rem;
+    font-size: 0.4rem;
+    line-height: 0.4rem;
+  }
+}
